grammar.js
    source_file: ($) => repeat($._pelt),

    // Comment rule
    comment: ($) => token(seq("//", /[^\n]*/)),

    // Program-element (pelt)
    //
    // pelt → pragma
    //  	  →	incld
    //  	  →	mdefn
    //  	  →	idecl
    //  	  →	xdecl
    //  	  →	ldecl
    //  	  →	lconstructor
    //  	  →	cdefn
    //  	  →	edecl
    //  	  →	wdecl
    //  	  →	ecdecl
    //  	  →	struct
    //  	  →	enumdef
    _pelt: ($) =>
      choice(
        $.pragma,
        $.incld,
        $.mdefn,
        $.idecl,
        $.xdecl,
        $.ldecl,
        $.lconstructor,
        $.cdefn,
        $.edecl,
        $.wdecl,
        $.ecdecl,
        $.struct,
        $.enumdef,
      ),

    // Pragma rules
    //
    // pragma →	pragma id version-expr ;
    gparams: ($) => seq("<", commaSep1($.generic_param), ">"),

    // Generic-parameter (generic-param)
    //
    // generic-param → # tvar-name
    //               → tvar-name
    generic_param: ($) => choice(seq("#", $._tvar_name), $._tvar_name),

    // Import-declaration (idecl)
    //
    // idecl → import import-name gargs^opt prefix^opt ;
    export: ($) => "export",

    // Sealed-modifier (sealed)
    //
    // sealed → sealed
    pure: ($) => "pure",

    // Export-declaration (xdecl)
    //
    // xdecl → export { id , … , id } ;^opt
    lconstructor: ($) =>
      seq("constructor", "(", commaSep($.parg), ")", $.block, optional(";")),

    // Circuit-definition (cdefn)
    //
    // cdefn → export^opt  pure^opt circuit function-name gparams^opt ( parg , … , parg ) : type block
    cdefn: ($) =>
      seq(
        optional($.export),
        optional($.pure),
        "circuit",
        $._function_name,
        optional($.gparams),
        "(",
        commaSep($.parg),
        ")",
        ":",
        $.type,
        $.block,
      ),

    // External-declaration (edecl)
    //
    // edecl → export^opt circuit id gparams^opt ( arg , … , arg ) : type ;
    parg: ($) => seq($.pattern, ":", $.type),

    // Type (type)
    //
    // type →	tref
    //      →	Boolean
    //      →	Field
    //      →	Uint < tsize >
    //      →	Uint < tsize .. tsize >
    //      →	Bytes < tsize >
    //      →	Opaque < str >
    //      →	Vector < tsize , type >
    //      →	[ type , … , type ]
    type: ($) =>
      choice(
        $.tref,
        "Boolean",
        "Field",
        seq("Uint", "<", $.tsize, ">"),
        seq("Uint", "<", $.tsize, "..", $.tsize, ">"),
        seq("Bytes", "<", $.tsize, ">"),
        seq("Opaque", "<", $.str, ">"),
        seq("Vector", "<", $.tsize, ",", $.type, ">"),
        seq("[", commaSep($.type), "]"),
      ),

    // Type-reference (tref)
    //
    // tref → id gargs^opt
    tsize: ($) => choice($.nat, $.id),

    // Generic-argument (garg)
    //
    // garg → nat
    //      → type
    block: ($) => seq("{", repeat($.stmt), "}"),

    // Statement (stmt)
    //
    // stmt → expr = expr ;
    //      → expr += expr ;
    //      → expr -= expr ;
    //      → expr-seq ;
    //      → return expr-seq ;
    //      → return ;
    //      → if ( expr-seq ) stmt else stmt
    //      → if ( expr-seq ) stmt
    //      → for ( const id of nat .. nat ) stmt
    //      → for ( const id of expr-seq ) stmt
    //      → assert expr str ;
    //      → const pattern = expr ;
    //      → const pattern : type = expr ;
    //      → block
    stmt: ($) =>
      prec.right(
        choice(
          seq($.expr, "=", $.expr, ";"),
          seq($.expr, "+=", $.expr, ";"),
          seq($.expr, "-=", $.expr, ";"),
          seq($.expr_seq, ";"),
          seq("return", $.expr_seq, ";"),
          seq("return", ";"),
          seq("if", "(", $.expr_seq, ")", $.stmt, "else", $.stmt),
          seq("if", "(", $.expr_seq, ")", $.stmt),
          seq("for", "(", "const", $.id, "of", $.nat, "..", $.nat, ")", $.stmt),
          seq("for", "(", "const", $.id, "of", $.expr_seq, ")", $.stmt),
          seq("assert", $.expr, optional($.str), ";"),
          seq("const", $.pattern, "=", $.expr, ";"),
          seq("const", $.pattern, ":", $.type, "=", $.expr, ";"),
          $.block,
        ),
      ),

    // Pattern (pattern)
    //
    // pattern → id
    //        → [ pattern-tuple-elt , … , pattern-tuple-elt ]
    //        → { pattern-struct-elt , … , pattern-struct-elt }
    pattern: ($) =>
      choice(
        $.id,
        seq("[", optional(commaSep($.pattern_tuple_elt)), "]"),
        seq("{", commaSep1($.pattern_struct_elt), "}"),
      ),

    // Pattern-tuple-element (pattern-tuple-elt)
    //
    // pattern-tuple-elt → (empty)
    //                   → pattern
    expr_seq: ($) =>
      choice($.expr, seq($.expr, repeat1(seq(",", $.expr)), ",", $.expr)),

    // Expression (expr)
    //
    // expr → expr0 ? expr : expr
    //      → expr0
    expr: ($) => choice(seq($._expr0, "?", $.expr, ":", $.expr), $._expr0),

    // Expression0 (expr0)
    //
    // expr0 → expr0 || expr1
    //       → expr1
    _expr0: ($) => prec.left(choice(seq($._expr0, $.or, $._expr1), $._expr1)),

    // Expression1 (expr1)
    //
    // expr1 → expr1 && expr2
    //       → expr2
    term: ($) =>
      choice(
        $.lit, // Literal (true, false, nat, str, pad)
        seq("default", "<", $.type, ">"), // Default value with type
        seq("map", "(", $.fun, ",", commaSep1($.expr), ")"), // Map function with one or more expressions
        seq("fold", "(", $.fun, ",", $.expr, ",", commaSep1($.expr), ")"), // Fold with initial value and list
        seq($.fun, "(", commaSep($.expr), ")"), // Function call with zero or more expressions
        seq("disclose", "(", $.expr, ")"), // Disclose with single expression
        seq($.tref, "{", commaSep($.struct_arg), "}"), // Struct literal with type reference
        seq("[", commaSep($.expr), "]"), // Array literal with optional trailing comma
        $.id, // Identifier
        seq("(", $.expr_seq, ")"), // Parenthesized expression sequence
      ),

    // Literal (lit)
    //
    // lit → true
    //     → false
    //     → nat
    //     → str
    //     → pad ( nat , str )
    lit: ($) =>
      choice(
        "true",
        "false",
        $.nat,
        $.str,
        seq("pad", "(", $.nat, ",", $.str, ")"),
      ),

    // Structure-argument (struct-arg)
    //
    // struct-arg → expr
    //            → id : expr
    //            → ... expr
    equals: ($) => "==",
    id: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    _function_name: ($) => $.id,
    _tvar_name: ($) => $.id,

    // field-literal (nat)
    //
    // a field literal is 0 or a natural number formed from a sequence
    // of digits starting with 1-9, e.g. 723, whose value does not exceed
    // the maximum field value
    nat: ($) => choice("0", /[1-9][0-9]*/),

    // string-literal (str, file)
    //
    // The basic string-literal rule that matches TypeScript strings
